--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,8 +5,7 @@
     android:id="@+id/edit_event"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    style="@style/EditEvent_Layout">
+    android:orientation="vertical">
     
     <!-- 
     <TextView
