--- a/res/layout/edit_area_custom_actionbar.xml
+++ b/res/layout/edit_area_custom_actionbar.xml
@@ -1,53 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2011 The Android Open Source Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@color/background_color" >
+    android:background="#ffdddddd"
+    android:orientation="horizontal" >
 
-    <!-- id must match corresponding menu item id -->
-    <LinearLayout
+    <Button
         android:id="@+id/action_cancel"
-        style="@style/EditEventCustomActionButton">
+        style="@style/EditEventCustomActionButton"
+        android:drawableLeft="@drawable/ic_menu_cancel_holo_light"
+        android:text="@string/discard_label"
+        />
 
-        <ImageView
-            android:src="@drawable/ic_menu_cancel_holo_light"
-            style="@style/EditEventCustomActionButtonImage" />
-        <TextView
-            android:text="@string/discard_label"
-            style="@style/EditEventCustomActionButtonText" />
-
-    </LinearLayout>
-
-    <!-- id must match corresponding menu item id -->
-    <LinearLayout
+    <Button
         android:id="@+id/action_done"
-        style="@style/EditEventCustomActionButton">
+        style="@style/EditEventCustomActionButton"
+        android:drawableLeft="@drawable/ic_menu_done_holo_light"
+        android:text="@string/save_label"
+        />
 
-        <ImageView
-            android:src="@drawable/ic_menu_done_holo_light"
-            style="@style/EditEventCustomActionButtonImage" />
-        <TextView
-            android:text="@string/save_label"
-            style="@style/EditEventCustomActionButtonText" />
-
-    </LinearLayout>
-
-    
 </LinearLayout>
