--- a/res/layout/edit_area_custom_actionbar.xml
+++ b/res/layout/edit_area_custom_actionbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2011 The Android Open Source Project
+<!--
+     Copyright (C) 2011 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -11,44 +12,37 @@
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
-     limitations under the License.
+     limitations under the License.
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:divider="?android:attr/dividerVertical"
     android:dividerPadding="12dip"
-    android:showDividers="middle">
+    android:orientation="horizontal"
+    android:showDividers="middle" >
 
-    <!-- id must match corresponding menu item id -->
-    <LinearLayout
-        android:id="@+id/action_cancel"
-        style="@style/EditEventCustomActionButton">
+    <Button
+        android:id="@+id/cancel_button"
+        style="?android:attr/buttonBarButtonStyle"
+        android:textAppearance="?android:attr/actionMenuTextAppearance"
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:drawablePadding="0dp"
+        android:maxLines="2"
+        android:text="@string/discard_label" />
 
-        <ImageView
-            android:src="@drawable/ic_menu_cancel_holo_light"
-            style="@style/EditEventCustomActionButtonImage" />
-        <TextView
-            android:text="@string/discard_label"
-            style="@style/EditEventCustomActionButtonText" />
-
-    </LinearLayout>
-
-    <!-- id must match corresponding menu item id -->
-    <LinearLayout
-        android:id="@+id/action_done"
-        style="@style/EditEventCustomActionButton">
-
-        <ImageView
-            android:src="@drawable/ic_menu_done_holo_light"
-            style="@style/EditEventCustomActionButtonImage" />
-        <TextView
-            android:text="@string/save_label"
-            style="@style/EditEventCustomActionButtonText" />
-
-    </LinearLayout>
-
+    <Button
+        android:id="@+id/ok_button"
+        style="?android:attr/buttonBarButtonStyle"
+        android:textAppearance="?android:attr/actionMenuTextAppearance"
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:filterTouchesWhenObscured="true"
+        android:maxLines="2"
+        android:text="@string/save_label" />
 
 </LinearLayout>
