--- a/res/layout/edit_area_custom_actionbar.xml
+++ b/res/layout/edit_area_custom_actionbar.xml
@@ -16,33 +16,35 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/custom_actionbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:divider="?android:attr/dividerVertical"
     android:dividerPadding="12dip"
     android:orientation="horizontal"
-    android:showDividers="middle" >
+    android:showDividers="middle"
+    android:visibility="visible" >
 
     <Button
         android:id="@+id/cancel_button"
         style="?android:attr/buttonBarButtonStyle"
-        android:textAppearance="?android:attr/actionMenuTextAppearance"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:drawablePadding="0dp"
         android:maxLines="2"
-        android:text="@string/discard_label" />
+        android:text="@string/discard_label"
+        android:textAppearance="?android:attr/actionMenuTextAppearance" />
 
     <Button
         android:id="@+id/ok_button"
         style="?android:attr/buttonBarButtonStyle"
-        android:textAppearance="?android:attr/actionMenuTextAppearance"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:filterTouchesWhenObscured="true"
         android:maxLines="2"
-        android:text="@string/save_label" />
+        android:text="@string/save_label"
+        android:textAppearance="?android:attr/actionMenuTextAppearance" />
 
 </LinearLayout>
