--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -230,4 +230,10 @@
         <item name="android:layout_marginTop">-4dp</item>
         <item name="android:singleLine">true</item>
     </style>
+
+    <style name="ButtonText">
+        <item name="android:textColor">#00ff00</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 </resources>
