--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -42,6 +42,12 @@
             android:layout_height="wrap_content"
             layout="@layout/edit_area_custom_actionbar" />
 
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+			android:layout_alignParentBottom="true"
+            layout="@layout/area_details_overlay" />
+        
         <Button
             android:id="@+id/button_remove"
             style="?android:attr/buttonBarButtonStyle"
