--- a/res/layout/area_details_overlay.xml
+++ b/res/layout/area_details_overlay.xml
@@ -1,53 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2011 The Android Open Source Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/custom_actionbar"
+    android:id="@+id/details_overlay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/bar_background"
-    android:divider="?android:attr/dividerVertical"
-    android:dividerPadding="12dip"
-    android:orientation="horizontal"
-    android:showDividers="middle"
-    android:visibility="visible" >
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="?android:attr/dividerVertical"
+        android:dividerPadding="12dip"
+        android:orientation="horizontal"
+        android:showDividers="middle"
+        android:visibility="visible" >
+
+        <TextView
+            android:id="@+id/area_details_name"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawablePadding="0dp"
+            android:maxLines="1"
+            android:padding="12dp"
+            android:text="@string/area_default_name"
+            android:textAppearance="?android:attr/actionMenuTextAppearance"
+            android:textStyle="bold"
+            android:textColor="@color/text" />
+
+        <TextView
+            android:id="@+id/area_details_description"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawablePadding="0dp"
+            android:maxLines="1"
+            android:padding="12dp"
+            android:text="@string/area_default_description"
+            android:textAppearance="?android:attr/actionMenuTextAppearance"
+            android:textStyle="bold"
+            android:textColor="@color/text" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/area_details_name"
-        android:layout_width="0dip"
+        android:id="@+id/editText1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:drawablePadding="0dp"
-        android:maxLines="1"
+        android:maxLines="4"
+        android:ems="10"
         android:padding="12dp"
-        android:text="@string/area_default_name"
-        android:textAppearance="?android:attr/actionMenuTextAppearance"
-        android:textColor="@color/text" />
-
-    <TextView
-        android:id="@+id/area_details_description"
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:drawablePadding="0dp"
-        android:maxLines="1"
-        android:padding="12dp"
-        android:text="@string/area_default_description"
-        android:textAppearance="?android:attr/actionMenuTextAppearance"
+        android:text="Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing..."
         android:textColor="@color/text" />
 
 </LinearLayout>
