--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,4 +5,8 @@
 	android:title="@string/add_new_marker" 
 	android:icon="@drawable/marker_start">
 </item>
+<item android:id="@+id/clear_all_areas" 
+	android:title="@string/clear_all_areas" 
+	android:icon="@drawable/marker_start">
+</item>
 </menu>
