--- a/res/layout/custom_actionbar.xml
+++ b/res/layout/custom_actionbar.xml
@@ -1,19 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2011 The Android Open Source Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_actionbar"
@@ -49,10 +34,34 @@
             android:layout_height="fill_parent"
             android:filterTouchesWhenObscured="true"
             android:maxLines="1"
-            android:text="New"
+            android:text="@string/btn_new"
             android:textAppearance="?android:attr/actionMenuTextAppearance"
             android:textColor="@color/text" />
-    
+
+        <Button
+            android:id="@+id/edit_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:filterTouchesWhenObscured="true"
+            android:maxLines="1"
+            android:text="@string/btn_edit"
+            android:textAppearance="?android:attr/actionMenuTextAppearance"
+            android:textColor="@color/text"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/done_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:filterTouchesWhenObscured="true"
+            android:maxLines="1"
+            android:text="@string/btn_done"
+            android:textAppearance="?android:attr/actionMenuTextAppearance"
+            android:textColor="@color/text"
+            android:visibility="gone" />
+        
     </LinearLayout>
     
     <LinearLayout
