--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <!--
-    <TextView
-        android:id="@+id/loading_message"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="@string/loading"
-        style="?android:attr/textAppearanceLarge"
-        android:background="#FFFFFFFF"/>
-    -->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -57,6 +45,13 @@
             android:layout_height="wrap_content"
 			android:layout_alignParentBottom="true"
             layout="@layout/area_details_overlay"
+            android:visibility="gone" />
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+			android:layout_alignParentBottom="true"
+            layout="@layout/area_details_edit_overlay"
             android:visibility="gone" />
         
     </RelativeLayout>
