--- a/res/layout/area_details_edit_overlay.xml
+++ b/res/layout/area_details_edit_overlay.xml
@@ -26,8 +26,8 @@
             android:padding="12dp"
             android:text="@string/area_default_name"
             android:textAppearance="?android:attr/actionMenuTextAppearance"
-            android:textStyle="bold"
-            android:textColor="@color/text" />
+            android:textColor="@color/text_dark"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/area_details_description_edit"
@@ -39,8 +39,9 @@
             android:padding="12dp"
             android:text="@string/area_default_description"
             android:textAppearance="?android:attr/actionMenuTextAppearance"
-            android:textStyle="bold"
-            android:textColor="@color/text" />
+            android:textColor="@color/text_dark"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
     <Spinner
@@ -55,9 +56,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:lines="8"
+        android:inputType="textMultiLine"
+        android:lines="10"
         android:padding="12dp"
         android:text="Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing..."
-        android:textColor="@color/text" />
+        android:textColor="@color/text_dark" />
 
 </LinearLayout>
