--- a/res/layout/area_details_edit_overlay.xml
+++ b/res/layout/area_details_edit_overlay.xml
@@ -25,7 +25,8 @@
             android:inputType="text"
             android:maxLines="1"
             android:padding="12dp"
-            android:textAppearance="?android:attr/actionMenuTextAppearance"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/area_default_name"
             android:textColor="@color/text_dark"
             android:textStyle="bold" />
         <EditText
@@ -37,8 +38,8 @@
             android:inputType="text"
             android:maxLines="1"
             android:padding="12dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/area_default_owner"
-            android:textAppearance="?android:attr/actionMenuTextAppearance"
             android:textColor="@color/text_dark"
             android:textStyle="bold" />
 
@@ -59,7 +60,8 @@
         android:inputType="textMultiLine"
         android:lines="10"
         android:padding="12dp"
-        android:text="Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing...Testing..."
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/area_default_description"
         android:textColor="@color/text_dark" />
 
 </org.domain.mobile.android.mymapview.AreaDetailsEditView>
