--- a/res/layout/area_details_edit_overlay.xml
+++ b/res/layout/area_details_edit_overlay.xml
@@ -24,7 +24,7 @@
             android:inputType="text"
             android:maxLines="1"
             android:padding="12dp"
-            android:text="@string/area_default_name"
+            android:text="@string/area_name_label"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/text_dark"
             android:textStyle="bold" />
@@ -38,7 +38,7 @@
             android:inputType="text"
             android:maxLines="1"
             android:padding="12dp"
-            android:text="@string/area_default_owner"
+            android:text="@string/area_owner_label"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/text_dark"
             android:textStyle="bold" />
@@ -52,7 +52,7 @@
         android:inputType="textMultiLine"
         android:lines="10"
         android:padding="12dp"
-        android:text="@string/area_default_description"
+        android:text="@string/area_description_label"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/text_dark" />
 
