--- a/res/layout/area_details_edit_overlay.xml
+++ b/res/layout/area_details_edit_overlay.xml
@@ -25,8 +25,6 @@
             android:maxLines="1"
             android:padding="12dp"
             android:text="@string/area_name_label"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/text_dark"
             android:textStyle="bold" />
 
         <EditText
@@ -39,8 +37,6 @@
             android:maxLines="1"
             android:padding="12dp"
             android:text="@string/area_owner_label"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/text_dark"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -52,9 +48,7 @@
         android:inputType="textMultiLine"
         android:lines="10"
         android:padding="12dp"
-        android:text="@string/area_description_label"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/text_dark" />
+        android:text="@string/area_description_label" />
 
     <Spinner
         android:id="@+id/color_spinner"
