--- a/res/values-v11/themes.xml
+++ b/res/values-v11/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="MyTheme" parent="@android:style/Theme.Holo.Light">
+    <style name="CompatTheme" parent="@android:style/Theme.Holo.Light.NoActionBar">
         <!-- Any customizations for your app running on devices with Theme.Holo here -->
     </style>
 </resources>
