--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="MyTheme" parent="@android:style/Theme">
+    <style name="CompatTheme" parent="@android:style/Theme">
         <!-- Any customizations for your app running on pre-3.0 devices here -->
     </style>
 </resources>
